2006-12-04  Bruno coudoin  <bruno.coudoin@free.fr>

	- Added Korean support
	- Now fullscreen no more the default.

	* boards/flags/ko.png:
	* configure.in:
	* docs/gcompris2spip.pl:
	* src/gcompris/config.c:
	* src/gcompris/properties.c: (gc_prop_new):

2006-12-03  Yves Combe  <yves@ycombe.net>

	By Miguel DE IZARRA:
	- shapegame: fix zommx/zoomy pb.
	- scale.c: new version of scale game

	* boards/scales/balance.png:
	* boards/scales/bras.png:
	* boards/scales/plateau.png:
	* boards/scalesboard.xml.in:
	* src/boards/Makefile.am:
	* src/boards/hanoi.c: (hanoi_create_item):
	* src/boards/scale.c: (pause_board), (start_board), (end_board),
	(set_level), (is_our_board), (get_total_weight),
	(scale_anim_plateau), (scale_item_event), (scale_list_add_weight),
	(scale_next_level), (scale_destroy_all_items), (game_won),
	(process_ok):
	* src/boards/shapegame.c: (item_event_drag):

2006-12-01  Bruno coudoin  <bruno.coudoin@free.fr>

	* src/boards/erase.c: (erase_destroy_all_items),
	(erase_create_item), (erase_one_item), (item_event): Feature enhancement by Joshua N Pritikin
	now there is a miminum time to spend on each block to avoid children to move the mouse rapidly
	and not focusing on their gesture.
	The problem we observe at our school is that some young children (mostly
	boys) think that the way to win the normal mode of the erase game is the
	move the mouse as fast as possible. The attached patch adds a speed
	limit. The mouse must remain over the item for 50ms before the item is
	removed.

2006-11-29  Bruno coudoin  <bruno.coudoin@free.fr>

	- Added Audio effects on more activities.
	  sounds taken from tuxpaint.

	* boards/sounds/bleep.wav:
	* boards/sounds/bubble.wav:
	* boards/sounds/darken.wav:
	* boards/sounds/drip.wav:
	* boards/sounds/flip.wav:
	* boards/sounds/smudge.wav:
	* boards/sounds/tuxok.wav:
	* boards/sounds/youcannot.wav:
	* src/boards/clickgame.c: (fish_gobble), (canvas_event):
	* src/boards/erase.c: (start_board), (end_board),